# Mars

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  build.zig  build.zig.zon
app/: main.c  main.cpp  main.zig
include/: error.hpp  mars.h  mars.hpp  mars_macros.h
shaders/: shader.slang  shader2d.slang  shader3d.slang  shaderTemp.slang
src/: Array.cppm  GPUBuffer.cppm  GPUBuffer.hpp  buffer.zig  c.zig  camera.cppm  commandBuffer.zig  data.zig  debugMessenger.zig  depthResources.zig  descriptorSetLayout.zig  descriptors.zig  device.zig  draw.zig  error.cppm  flagBits.cppm  flagbits.cppm  gpubuffer.cppm  gpuimage.cppm  graphicsPipeline.zig  heaparray.cppm  input.cpp  input.cppm  instance.zig  jsonparser.cpp  jsonparser.cppm  mars.c  mars.cpp  mars.cppm  mars_macros.h  math.zig  mesh.zig  multimap.cppm  object.cppm  renderer.cpp  renderer.cppm  room.cppm  root.zig  swapchain.zig  syncObjects.zig  (+7 more)
src/ecs/: component.cpp  component.cppm  component_system.cppm  components.cppm  ecs.cpp  ecs.cppm  entity.cpp  entity.cppm  entity_manager.cpp  entity_manager.cppm
src/physics/: physics_manager.cpp  physics_manager.cppm  position.cppm
src/renderer/: flags.cppm  gpubuffer.cppm  gpuimage.cppm  linkedList.c  linkedList.cpp  maps.cppm  renderer.c  renderer.cpp  renderer.cppm  renderer_ecs.cpp  renderer_ecs.cppm  vkhelper.cppm
tests/: tests.zig
zig-version/app/: data.zig
zig-version/src/: c.zig  debugMessenger.zig  depthResources.zig  device.zig  graphicsPipeline.zig  instance.zig  root.zig  textureSampler.zig  window.zig
zig-version/tests/: tests.zig
